# restnotifier

./: .gitignore  LICENSE.txt  README.md
restnotifier/: CMakeLists.txt  buildconfig.h.in  icons.qrc  idletime.c  lockingrestdialog.cpp  lockingrestdialog.h  lockingrestdialog.ui  main.cpp  messagecontent.cpp  messagecontent.h  messagecontent.ui  restdialog.cpp  restdialog.h  restdialog.ui  restnotifier.desktop  restnotifier.pro  restnotifier.rc  restnotifier_ru.ts  restnotifier_ru_RU.ts  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  trayicon.cpp  trayicon.h
